tests/baselines/reference/indexedAccessOfConcreteNonpublicFields.errors.txt
indexedAccessOfConcreteNonpublicFields.ts(4,22): error TS4129: Private or protected member '_property' cannot be accessed via indexed access.
indexedAccessOfConcreteNonpublicFields.ts(4,47): error TS4129: Private or protected member '_property2' cannot be accessed via indexed access.


==== indexedAccessOfConcreteNonpublicFields.ts (2 errors) ====
    export class Foo {
        private _property: string = '';
        protected _property2: string = '';
        constructor(arg: Foo['_property'], other: Foo['_property2']) {
                         ~~~~~~~~~~~~~~~~
!!! error TS4129: Private or protected member '_property' cannot be accessed via indexed access.
                                                  ~~~~~~~~~~~~~~~~~
!!! error TS4129: Private or protected member '_property2' cannot be accessed via indexed access.
        }
    }